Fix copy-paste errors in QtPrivate::ConnectionTypes

That resulted in error such as:
  qobject_impl.h(82) : error C2078: too many initializers

This should have been tested by tst_QObject::connectManyArguments, but
the test did not work because the detection of defined QMetaType was broken
for const references. That will be fixed in a latter commit.

Task-number: QTBUG-29130
Change-Id: I78514c251358c0e8adf33af724d87ab114230cd3
Reviewed-by: Thiago Macieira <thiago.macieira@intel.com>

cregit: a620c67e6454f2197f60b076a4baf543a6675eae https://github.com/qt/qtbase/commit/a620c67e6454f2197f60b076a4baf543a6675eae