src/corelib/kernel/qobject_impl.h
@@ -434,7 +434,7 @@ specifier|const
 name|int
 name|t
 index|[
-literal|4
+literal|5
 index|]
 operator|=
 block|{
@@ -549,7 +549,7 @@ specifier|const
 name|int
 name|t
 index|[
-literal|4
+literal|6
 index|]
 operator|=
 block|{
@@ -682,7 +682,7 @@ specifier|const
 name|int
 name|t
 index|[
-literal|4
+literal|7
 index|]
 operator|=
 block|{
